<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/blackground_block" />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sos"
            style="@style/lockScrenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="紧急呼叫" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_cancle"
            style="@style/lockScrenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="取消" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_below="@+id/ll_top"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_alert"
            style="@style/lockScrenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="输入密码" />

        <LinearLayout
            android:id="@+id/ll_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@id/iv_flag_0"
                style="@style/lockScrenFlag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/flag_circle_s" />

            <ImageView
                android:id="@id/iv_flag_1"
                style="@style/lockScrenFlag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/flag_circle_s" />

            <ImageView
                android:id="@id/iv_flag_2"
                style="@style/lockScrenFlag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/flag_circle_s" />

            <ImageView
                android:id="@id/iv_flag_3"
                style="@style/lockScrenFlag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/flag_circle_s" />

        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="4">

            <TextView
                android:id="@id/tv_num_1"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_1" />

            <TextView
                android:id="@id/tv_num_2"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_2" />

            <TextView
                android:id="@id/tv_num_3"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_3" />

            <TextView
                android:id="@id/tv_num_4"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_4" />

            <TextView
                android:id="@id/tv_num_5"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_5" />

            <TextView
                android:id="@id/tv_num_6"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_6" />

            <TextView
                android:id="@id/tv_num_7"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_7" />

            <TextView
                android:id="@id/tv_num_8"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_8" />

            <TextView
                android:id="@id/tv_num_9"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_9" />

            <TextView
                android:id="@id/tv_num_0"
                style="@style/lockScrenNumber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:layout_row="3"
                android:background="@mipmap/btn_circle_b"
                android:gravity="center"
                android:text="@string/num_0" />
        </GridLayout>
    </LinearLayout>


</RelativeLayout>